[gd_scene load_steps=15 format=3 uid="uid://5s45bdvu8gb1"]

[ext_resource type="Script" path="res://AccountEntry.gd" id="1_ximnf"]
[ext_resource type="Texture2D" uid="uid://d0mot888gxskd" path="res://Assets/UI/battle_Label/battle_label.png" id="2_6cesh"]
[ext_resource type="Texture2D" uid="uid://bt5gd6knwldey" path="res://Assets/UI/trasparent background/0B663119-D32F-4FA6-AC1E-3040989151F2.png" id="3_0hoq5"]
[ext_resource type="Texture2D" uid="uid://buctd8colcne1" path="res://Assets/UI/trasparent background/51A96E2A-E987-4DD6-9C49-37027C877AC6.png" id="4_fwoti"]
[ext_resource type="Texture2D" uid="uid://d1o7y55cydk0p" path="res://Assets/UI/trasparent background/DB3FCCDF-C9DB-4949-A256-86B28C643560.png" id="5_3wgm4"]
[ext_resource type="Texture2D" uid="uid://biwileyr3o0jc" path="res://Assets/UI/trasparent background/F4D3C18B-4BE6-4A76-99CA-B95B70916A82.png" id="6_cf7jd"]
[ext_resource type="Texture2D" uid="uid://dcvp7f2h1ekhn" path="res://Assets/UI/label.png" id="7_4ihoo"]
[ext_resource type="Texture2D" uid="uid://cdb0bphmyr1e4" path="res://Assets/UI/label_wave.png" id="8_s2nrp"]
[ext_resource type="Texture2D" uid="uid://dwq8gynemg7wd" path="res://Assets/UI/highscore_label.png" id="9_v7u7r"]
[ext_resource type="Texture2D" uid="uid://b0vjaywamx3yp" path="res://Assets/Lights/spotlight.png" id="10_kta5k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hftkw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0hoq5")
}, {
"duration": 1.0,
"texture": ExtResource("4_fwoti")
}, {
"duration": 1.0,
"texture": ExtResource("5_3wgm4")
}, {
"duration": 1.0,
"texture": ExtResource("6_cf7jd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_2jn83"]
font_size = 31

[sub_resource type="LabelSettings" id="LabelSettings_52d6f"]
font_size = 66

[sub_resource type="LabelSettings" id="LabelSettings_3e1rr"]
font_size = 66

[node name="AccountEntry" type="Node2D"]
script = ExtResource("1_ximnf")

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(-21, 17)
rotation = 1.5708
scale = Vector2(7.625, 14)
energy = 0.0
range_layer_max = 2
texture = ExtResource("10_kta5k")

[node name="Sprite2D2" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_6cesh")

[node name="selected" type="AnimatedSprite2D" parent="Sprite2D2"]
visible = false
position = Vector2(1, -1)
scale = Vector2(0.253906, 0.253906)
sprite_frames = SubResource("SpriteFrames_hftkw")
autoplay = "default"
frame_progress = 0.277636

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -57)
scale = Vector2(1.63846, 1.80303)
texture = ExtResource("7_4ihoo")

[node name="Name" type="Label" parent="."]
offset_left = -106.25
offset_top = -80.5
offset_right = 101.75
offset_bottom = -36.5
text = "Accountname"
label_settings = SubResource("LabelSettings_2jn83")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(-128, 47)
scale = Vector2(0.256906, 0.256906)
texture = ExtResource("8_s2nrp")

[node name="Wave" type="Label" parent="Sprite2D3"]
offset_left = -3.89256
offset_top = -54.4946
offset_right = 169.107
offset_bottom = 130.505
text = "Wave

"
label_settings = SubResource("LabelSettings_52d6f")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(122, 47)
scale = Vector2(-0.257, 0.257)
texture = ExtResource("9_v7u7r")

[node name="Lvl" type="Label" parent="Sprite2D4"]
offset_left = 171.206
offset_top = -50.5837
offset_right = 780.206
offset_bottom = 319.416
scale = Vector2(-1, 1)
text = "level"
label_settings = SubResource("LabelSettings_3e1rr")

[node name="Sprite2D5" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -252.0
offset_top = -168.0
offset_right = 250.0
offset_bottom = 166.0

[node name="hint" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 261.0
offset_top = -14.0
offset_right = 469.0
offset_bottom = 9.0
text = "Enter or click again to start"

[node name="Sprite2D6" type="Sprite2D" parent="hint"]
show_behind_parent = true
position = Vector2(103.125, 13.25)
scale = Vector2(1.31061, 1.31061)
texture = ExtResource("7_4ihoo")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
